# promptmask

./: .dockerignore  .gitattributes  .gitignore  .readthedocs.yaml  Dockerfile  Dockerfile.example-cpu-llamacpp  Dockerfile.hf-demo-cpu  README.md  docker-compose.yml  mkdocs.yml  promptmask.config.default.toml  pyproject.toml  start-cpu-llamacpp.sh
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml  hfspace-demo.yml  python-publish.yml
docs/: index.md  reference.md
eval/: .gitignore  benchmark.md  s1_abatch.py  s1_batch.py  s1_single.py  s2_eval_result.py  s3_gen_report.py  util.py
eval/data/: eval_result.csv  eval_result_v1.csv  eval_result_v2.csv
eval/data/pre-0.1.0/: eval_result_swap.csv
examples/: 01_basic_usage.py  02_enhanced_openai_sdk.py  03_async.py
src/promptmask/: config.py  core.py  promptmask.config.default.toml  utils.py
src/promptmask/adapter/: openai.py
src/promptmask/api/: main.py  models.py
src/promptmask/web/: gateway.py  main.py
src/promptmask/web/static/: index.html
tests/: test_core.py
